fix the nearly indistinguishable misalignment
Former-commit-id: d34cc0463e07f68c4f4536c956046847fec11712

--- a/src/site/bits/style.css
+++ b/src/site/bits/style.css
@@ -30,11 +30,11 @@ body {
 	padding: 0px;
 	float: left;
 	height: 75px;
-	width: 738px;
+	width: 740px;
 }
 #page {
 	padding: 0px 40px;
-	width: 738px;
+	width: 740px;
 	background: url(/bits/bg_page.png) repeat-y center top;
 	float: left;
 }
